[package]
name = "earthsoft-core"
version = "0.0.1"
edition = "2021"

[dependencies]
earthsoft-sdk = { path = "../earthsoft-sdk" }
async-trait = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "1.0" }
tokio = { version = "1.0" }
tokio-stream = { version = "0.1" }
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

[build-dependencies]

[dev-dependencies]
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }